--- a/Sportify/Base.lproj/LaunchScreen.storyboard
+++ b/Sportify/Base.lproj/LaunchScreen.storyboard
@@ -34,7 +34,7 @@
     <resources>
         <image name="logo" width="2000" height="2000"/>
         <namedColor name="BGColor">
-            <color red="1" green="0.94117647058823528" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.97647058823529409" green="0.98039215686274506" blue="0.98431372549019602" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
